appintments and testimonials feature added

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -108,6 +108,43 @@
     "latitude": "Latitude",
     "longitude": "Longitude",
     "images": "Images",
-    "createPropertyButton": "Create Property"
+    "createPropertyButton": "Create Property",
+    "myInquiriesTitle": "My Inquiries",
+    "propertyLabel": "Property",
+    "statusLabel": "Status",
+    "propertyNotAvailable": "Property no longer available",
+    "noInquiriesYet": "You have not made any inquiries yet.",
+    "loadingInquiries": "Loading inquiries...",
+    "myInquiries": "My Inquiries",
+    "whatOurClientsSay": "What Our Clients Say",
+    "submitYourTestimonial": "Submit Your Testimonial",
+    "manageTestimonials": "Manage Testimonials",
+    "content": "Content",
+    "approve": "Approve",
+    "reject": "Reject",
+    "submitTestimonial": "Submit Testimonial",
+    "submitTestimonialLink": "Submit a Testimonial",
+    "yourReview": "Your Review",
+    "rating": "Rating",
+    "submitReview": "Submit Review",
+    "testimonialSubmissionInfo": "Your review will be visible after it has been approved by an admin.",
+    "manageAppointments": "Manage Appointments",
+    "requestedDate": "Requested Date",
+    "notes": "Notes",
+    "pending": "Pending",
+    "confirmed": "Confirmed",
+    "cancelled": "Cancelled",
+    "completed": "Completed",
+    "bookAppointment": "Book a Visit",
+    "selectDateAndTime": "Select a Date & Time",
+    "notesOptional": "Notes (Optional)",
+    "requestAppointmentButton": "Request Appointment",
+    "appointmentBookedSuccess": "Appointment requested successfully. We will confirm with you shortly.",
+    "appointmentBookError": "Failed to book appointment. Please try again.",
+    "myAppointments": "My Appointments",
+    "appointmentFor": "Appointment for",
+    "on": "on",
+    "noAppointmentsYet": "You have not booked any appointments yet."
+    
   }
 }
