--- a/src/locales/ne.json
+++ b/src/locales/ne.json
@@ -108,6 +108,42 @@
     "longitude": "देशान्तर",
     "status": "स्थिति",
     "images": "फोटोहरू",
-    "createPropertyButton": "सम्पत्ति सिर्जना गर्नुहोस्"
+    "createPropertyButton": "सम्पत्ति सिर्जना गर्नुहोस्",
+    "myInquiriesTitle": "मेरा जिज्ञासाहरू",
+    "propertyLabel": "सम्पत्ति",
+    "statusLabel": "स्थिति",
+    "propertyNotAvailable": "सम्पत्ति अब उपलब्ध छैन",
+    "noInquiriesYet": "तपाईंले अहिलेसम्म कुनै जिज्ञासा राख्नुभएको छैन।",
+    "loadingInquiries": "जिज्ञासाहरू लोड हुँदैछ...",
+    "myInquiries": "मेरा जिज्ञासाहरू",
+    "whatOurClientsSay": " हाम्रा ग्राहकहरू के भन्छन्",
+    "submitYourTestimonial": "आफ्नो प्रशंसापत्र पेश गर्नुहोस्",
+    "manageTestimonials": "प्रशंसापत्र व्यवस्थापन",
+    "content": "सामग्री",
+    "approve": "स्वीकृत गर्नुहोस्",
+    "reject": "अस्वीकार गर्नुहोस्",
+    "submitTestimonial": "प्रशंसापत्र पेश गर्नुहोस्",
+    "submitTestimonialLink": "एउटा प्रशंसापत्र पेश गर्नुहोस्",
+    "yourReview": "तपाईंको समीक्षा",
+    "rating": "मूल्याङ्कन",
+    "submitReview": "समीक्षा पेश गर्नुहोस्",
+    "testimonialSubmissionInfo": "तपाईंको समीक्षा प्रशासकद्वारा स्वीकृत भएपछि देखिनेछ।",
+    "manageAppointments": "अपोइन्टमेन्ट व्यवस्थापन",
+    "requestedDate": "अनुरोध गरिएको मिति",
+    "notes": "टिप्पणीहरू",
+    "pending": "विचाराधीन",
+    "confirmed": "पुष्टि भयो",
+    "cancelled": "रद्द गरियो",
+    "completed": "सम्पन्न भयो",
+    "bookAppointment": "भेटघाट बुक गर्नुहोस्",
+    "selectDateAndTime": "मिति र समय चयन गर्नुहोस्",
+    "notesOptional": "टिप्पणी (वैकल्पिक)",
+    "requestAppointmentButton": "अपोइन्टमेन्ट अनुरोध गर्नुहोस्",
+    "appointmentBookedSuccess": "अपोइन्टमेन्ट सफलतापूर्वक अनुरोध गरियो। हामी चाँडै पुष्टि गर्नेछौं।",
+    "appointmentBookError": "अपोइन्टमेन्ट बुक गर्न असफल भयो। कृपया फेरि प्रयास गर्नुहोस्।",
+    "myAppointments": "मेरा अपोइन्टमेन्टहरू",
+    "appointmentFor": "को लागि अपोइन्टमेन्ट",
+    "on": "मा",
+    "noAppointmentsYet": "तपाईंले अहिलेसम्म कुनै अपोइन्टमेन्ट बुक गर्नुभएको छैन।"
   }
 }
